--- a/css/custom-dark.css
+++ b/css/custom-dark.css
@@ -2586,6 +2586,8 @@ body {
     align-items: center;
     justify-content: center;
     z-index: 10002;
+    opacity: 0;
+    transition: opacity 0.2s ease;
 }
 
 .loader-spinner {
